=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2011-10-28  10:35:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-389
Re-instate reading of charge netcdf files

This feature had been turned off after the BSC merge pending
clarification.

modified:
  Src/dhscf.F

-----------------------------------------------------------------------
2011-10-28  10:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-388
Grid file utilities. User-specified mesh sizes

Two new programs are available to generate grid files
(density, potential):

-- grid_rotate: cyclically rotates the coordinates of
                a grid file.
-- grid_supercell: generates the grid file appropriate
                   for a supercell.

The user can now specify the mesh sizes to be used
by the program, by inserting a block definition in 
the fdf file:

%block Mesh-sizes
  40 56 120
%endblock Mesh-sizes

This feature is useful when coupled to the above utilities,
since the "magic" fft numbers might not be appropriate.

added:
  Docs/Grid.CHANGES
  Util/Grid/grid_rotate.F90
  Util/Grid/grid_supercell.F90
modified:
  Src/Makefile
  Src/meshsubs.F
  Util/Grid/makefile

-----------------------------------------------------------------------
2011-09-16  09:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-387
Fix bug in BandLines processing

The processing of the BandLines block was faulty, resulting
in most cases in the skipping of the 'bands' calculation.

modified:
  Src/bands.F

-----------------------------------------------------------------------
2011-09-12  09:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-386
Fix fdf_defined to take blocks into account

The new version of fdf_defined was only checking
for the existence of single labels. It has been